# polmdqc

./: CMakeLists.txt  cmakesrc.txt
example/: 6-311ppg.xyz  Kraug-cc-pv5z.xyz  aug-cc-pv5z.xyz  aug-cc-pvtz.xyz  aug-cc-pvtz_stolerance.xyz
example/MDexample/: 3cln.key  3cln.xyz  alatet.key  water21.key  water21.xyz  waterbox100.key  waterbox30.key
example/OQCexample/: 3-21g.xyz  Kraug-cc-pvtz.xyz  sto-3g.xyz
example/QCexample/: 3-21g.key  3-21g.qxyz  pvtz.key  waterdimer.qxyz
example/QMexample/: cc-pvdz.xyz  sto-3g.xyz  tmp.xyz
include/: action.h  active.h  align.h  alphamol.h  analysis.h  analyz.h  analyze.h  angbnd.h  angles.h  angpot.h  argue.h  atmlst.h  atomid.h  atoms.h  attach.h  basefile.h  bath.h  bitor.h  bitors.h  bndpot.h  bndstr.h  bonds.h  bound.h  boxes.h  calcMode.h  cell.h  chgpen.h  chgpot.h  chgtrn.h  chkpole.h  chkxyz.h  chunks.h  cluster.h  command.h  control.h  couple.h  ctrpot.h  cutoffSwitch.h  cutoffs.h  damping.h  (+167 more)
include/md/: action.h  active.h  alfatom.h  alfboxsize.h  alfc.h  alfcx.h  alfcxedges.h  alfcxfaces.h  alfcxgmp.h  alfedge.h  alffunc.h  alfmol.h  alforder.h  alfp.h  alfsphere.h  alftetra.h  alftrig.h  align.h  alphamol.h  alphamol1.h  alphamol2.h  alphavol.h  alphmol.h  alterchg.h  analysis.h  analyz.h  analyze.h  angbnd.h  angles.h  angpot.h  argue.h  atmlst.h  atomid.h  atoms.h  attach.h  basefile.h  bath.h  bitor.h  bitors.h  bndpot.h  (+225 more)
include/oqc/: config.h  eri.h  fock.h  kbasis.h  kprim.h  kworker.h  mathUtils.h  nuclearRepulsion.h  omechanicqm.h  stringUtils.h  unitsqm.h
include/qc/: analyzeqm.h  basis.h  boys.h  boyscheb.h  boysref.h  cheb.h  clusterqm.h  energy.h  energyqm.h  finalqm.h  getbasis.h  getcartqm.h  ghost.h  groupqm.h  gss.h  hartree.h  init.h  initcheb.h  initialqm.h  ioUtils.h  katomqm.h  katomsqm.h  kgbs.h  kgss.h  kinetic.h  kmem.h  kmeth.h  kscf.h  ksym.h  mathUtils.h  mdqcvector.h  mechanicqm.h  mem.h  methodqm.h  methqm.h  nuclear.h  overlap.h  polmdqcqm.h  print.h  readbasis.h  (+6 more)
params/: hippoS101.prm
source/: analyze.cpp  boys.cpp  command.cpp  command.h  config.h  energy.cpp  energy.h  eri.cpp  eri.h  hartree.h  initial.cpp  initial.h  ioUtils.h  katoms.cpp  kbasis.cpp  kgbs.h  kprim.cpp  mathUtils.h  nuclear.h  nuclearRepulsion.cpp  nuclearRepulsion.h  promo.cpp  stringUtils.cpp  tinkerqm.cpp
src/: active.cpp  alphamol.cpp  alphamolExe.cpp  analysis.cpp  analyze.cpp  analyzeExe.cpp  angles.cpp  attach.cpp  basefile.cpp  bitors.cpp  bonds.cpp  boys.cpp  boys.h  chkpole.cpp  chkxyz.cpp  cluster.cpp  command.cpp  config.cpp  control.cpp  cpp_template  cutoffSwitch.cpp  cutoffs.cpp  damping.cpp  empole.cpp  energy.cpp  enrgyze.cpp  eri.cpp  fatal.cpp  field.cpp  final.cpp  fock.cpp  fock.h  gaussvol.cpp  getcart.cpp  getkey.cpp  getline.cpp  getnumb.cpp  getprm.cpp  getstring.cpp  gettext.cpp  (+85 more)
src/md/: active.cpp  alfatom.cpp  alfboxsize.cpp  alfcx.cpp  alfcxedges.cpp  alfcxfaces.cpp  alfcxgmp.cpp  alfedge.cpp  alfmol.cpp  alforder.cpp  alphamol.cpp  alphamol1.cpp  alphamol2.cpp  alphamolExe.cpp  alphavol.cpp  alterchg.cpp  analysis.cpp  analyze.cpp  analyzeExe.cpp  angles.cpp  attach.cpp  basefile.cpp  bitors.cpp  bonds.cpp  chkpole.cpp  chkring.cpp  chksymm.cpp  chkxyz.cpp  cluster.cpp  command.cpp  control.cpp  cutoffSwitch.cpp  cutoffs.cpp  damping.cpp  dcflux.cpp  delaunay.cpp  delconv.cpp  delcx.cpp  deldet.cpp  delflip.cpp  (+87 more)
src/oqc/: boys.cpp  eri.cpp  fock.cpp  hartree.cpp  katomsqm.cpp  kbasis.cpp  kgbs.cpp  kprim.cpp  (+10 more)
test/: CMakeLists.txt  active.cpp  active.h  amoeba.cpp  amoeba.h  amoebaMisc.cpp  amoebaMisc.h  amoebap.cpp  amoebap.h  analyze.cpp  bounds.cpp  bounds.h  boyscheb.cpp  chkpole.cpp  chkpole.h  chksymm.cpp  darray.cpp  getline.cpp  getnumb.cpp  getstring.cpp  gettext.cpp  getword.cpp  hartree.cpp  hartree.h  hippo.cpp  hippo.h  inertia.cpp  inertiaT.h  justify.cpp  lowcase.cpp  mdqcvector.cpp  numeral.cpp  qcmdvector.cpp  rotpole.cpp  rotpole.h  sort.cpp  spacefill.cpp  spacefill2.cpp  spacefillT.cpp  spacefillT.h  (+4 more)
test/testFiles/active/: active.key  inactive.key  water09_Na_Cls.xyz  waterbox30.key  waterbox30.xyz
test/testFiles/amoeba/: water09.xyz
test/testFiles/amoebaMisc/: water09.xyz_2  water09NSeq.xyz
test/testFiles/amoebap/: waterap.key
test/testFiles/bounds/: dodecahedron.key  monoclinic.key  octahedron.key  triclinic.key  waterbox30.xyz
test/testFiles/chkpole/: alatet.xyz
test/testFiles/chksymm/: alatet.key  cb8.key  cb8.prm  cb8.xyz  g9.key  g9.xyz
test/testFiles/hippo/: water21.key  water21.xyz
test/testFiles/inertia/: alatet.key
test/testFiles/rotpole/: ammonia.xyz  axetyp.json  axetyp.key  axetyp.xyz  benzene_ethyne_water.key  benzene_ethyne_water.xyz  lysine_3fold.json  lysine_3fold.key  lysine_3fold.xyz  lysine_zbisect.json  lysine_zbisect.key  water09_Na.xyz
test/testFiles/spacefill/: 3cln.key  3cln.key_2  3ibk.key  3ibk.xyz  active.key  active.key_2  alatet.key_2a  alatet.key_2b  alatet.key_2c  alatet.key_2d  alatet.key_2e  alatetwater.key_2  alatetwater.xyz  cb8.key  cb8.key_2  chloride27.xyz  chloride27_2.key  chloride27_2.key_2  chloride27_2.xyz  crystal8k_1.xyz  crystal8k_2.xyz  crystal8k_3.xyz  crystal8k_4.key  crystal8k_4.key_2  crystal8k_4.xyz  ermer.key  ermer.key_2  g9.key  g9.key_2  inactive.key  inactive.key_2  lchloride3.key  lchloride4.xyz  lchloride5.xyz  lchloride6.xyz  pchloride4.xyz  pchloride5.xyz  wateralatet.xyz  waterbox30.key  waterbox30.key_2
test/testFiles/water09/: water09.xyz
test/testFiles/water21/: water21.xyz
test/testFiles/water_3-21g/: kinetic.json  nuclear.json  overlap.json
test/testFiles/water_aug-cc-pvtz/: kinetic.json  nuclear.json  overlap.json
test/testFiles/waterap/: waterap.key
(+42 files in other folders)
